--- a/.github/workflows/arxiv.yml
+++ b/.github/workflows/arxiv.yml
@@ -32,4 +32,4 @@ jobs:
           git config user.email tj.29@qq.com
           git add .
           git commit -m "update"
-          git push
+          git push --force origin main
