--- a/.github/workflows/arxiv.yml
+++ b/.github/workflows/arxiv.yml
@@ -19,7 +19,7 @@ jobs:
       - name: install dependecies
         run: |
           python -m pip install --upgrade pip
-          pip install feedparser requests
+          pip install feedparser requests markdown
 
       - name: run script
         run: |
